--- a/chatbot/Dockerfile
+++ b/chatbot/Dockerfile
@@ -7,6 +7,8 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     libglib2.0-0 \
     libgl1 \
+    curl \
+    wget \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt ./requirements.txt
