--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,14 @@
 services:
   backend:
-    image: api
+    build:
+      context: ./api
+      args:
+        API_PORT: ${API_PORT}
     container_name: api
     env_file:
       - .env    
     ports:
-      - "8001:8001"
+      - ${API_PORT}:${API_PORT}
     networks:
       - chatbot_net
     depends_on:
@@ -15,33 +18,41 @@ services:
       - REDIS_PORT=${REDIS_PORT}
 
   chatbot:
-    image: chatbot
+    build:
+      context: ./chatbot
+      args:
+        CHATBOT_PORT: ${CHATBOT_PORT}
     container_name: chatbot
     env_file:
       - .env
     ports:
-      - "8000:8000"   
+      - ${CHATBOT_PORT}:${CHATBOT_PORT}   
     networks:
       - chatbot_net
     environment:
       - CHAINLIT_HOST=0.0.0.0
-      - CHAINLIT_PORT=8000
+      - CHAINLIT_PORT=${CHATBOT_PORT}
       - API_HOST=api
-      - API_PORT=8001
+      - API_PORT=${API_PORT}
       - FIRECRAWL_API_KEY=${FIRECRAWL_API_KEY}
 
   frontend:
-    image: ui
+    build:
+      context: .
+      args:
+        UI_PORT: ${UI_PORT}
     container_name: ui
     env_file:
       - .env
     ports:
-      - "8080:8080"  
+      - ${UI_PORT}:${UI_PORT}  
     environment:
-      - VUE_API_HOST=${VUE_API_HOST}
-      - VUE_API_PORT=${VUE_API_PORT}
+      - API_HOST=api
+      - API_PORT=${API_PORT}
       - CHATBOT_HOST=${CHATBOT_HOST}
       - CHATBOT_PORT=${CHATBOT_PORT}
+      - UI_HOST=${UI_HOST:-0.0.0.0}
+      - UI_PORT=${UI_PORT}
       - VUE_APP_CESIUM_TOKEN=${VUE_APP_CESIUM_TOKEN}
     networks:
       - chatbot_net
@@ -50,12 +61,12 @@ services:
     image: redis:7-alpine
     container_name: redis
     ports:
-      - "6380:6379"
+      - "${REDIS_PORT}:${REDIS_PORT}"
     networks:
       - chatbot_net
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes
+    command: redis-server --port ${REDIS_PORT} --appendonly yes
 
 networks:
   chatbot_net:
